--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Chat Room</title>
+    <link rel="shortcut icon" href="https://static.vecteezy.com/system/resources/previews/000/450/102/original/vector-chat-icon.jpg" />
     <!-- Google fonts. -->
     <link href='https://fonts.googleapis.com/css?family=Bungee Outline' rel='stylesheet'/>
     <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'/>
@@ -15,7 +16,10 @@
     <!-- The CSS and JS file must be declared after the things above-->
     <link rel="stylesheet" href="index.css"/>
     <script type="text/javascript" src="index.js"></script>
+  
 
+    <!-- font awesome  -->
+    <script src="  https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></script>
   </head>
   <body>
   </body>
